fix toggle problem, disable animation on mobile view, add shadow to menu on mobile view

--- a/app/common/scss/app.scss
+++ b/app/common/scss/app.scss
@@ -31,25 +31,27 @@ body {
   }
 }
 
-.view-animate.ng-enter, .view-animate.ng-leave {
-  transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.5s;
+@media(min-width: 768px){
+  .view-animate.ng-enter, .view-animate.ng-leave {
+    transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.5s;
 
-  display:block;
-  width:100%;
+    display:block;
+    width:100%;
 
-  position:absolute;
-  top:0;
-  left:0;
-  right:0;
-  bottom:0;
-}
+    position:absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+  }
 
-.view-animate.ng-enter {
-  left:100%;
-}
-.view-animate.ng-enter.ng-enter-active {
-  left: 1em;
-}
-.view-animate.ng-leave.ng-leave-active {
-  left:-100%;
+  .view-animate.ng-enter {
+    left:100%;
+  }
+  .view-animate.ng-enter.ng-enter-active {
+    left: 1em;
+  }
+  .view-animate.ng-leave.ng-leave-active {
+    left:-100%;
+  }
 }
