--- a/app/common/scss/sidebar.scss
+++ b/app/common/scss/sidebar.scss
@@ -22,6 +22,7 @@
   margin-left: -250px;
   overflow-y: auto;
   background: $color1;
+  box-shadow: 5px 0px 12px black;
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
@@ -51,6 +52,7 @@
   margin: 0;
   padding: 0;
   list-style: none;
+  color: $color3  ;
 }
 
 .sidebar-nav li {
@@ -62,7 +64,6 @@
   display: block;
   text-decoration: none;
   color: $color3;
-
   -webkit-transition: color 100ms, background 400ms;
   -moz-transition: color 100ms, background 400ms;
   -ms-transition: color 100ms, background 400ms;
@@ -98,6 +99,45 @@
   margin-bottom: 1em;
 }
 
+@media(min-width: 768px) {
+  #wrapper, #wrapper.toggled {
+    padding-left: 250px;
+    position: relative;
+  }
+
+
+  #sidebar-wrapper {
+    width: 250px;
+    box-shadow: 0px 0px 0px black;
+  }
+
+
+  #page-content-wrapper {
+    position: relative;
+  }
+
+  #wrapper.toggled #page-content-wrapper {
+    position: relative;
+    margin-right: 0;
+
+  }
+}
+
+@media(min-width: 1200px ){
+  /*kontener trzymajacy sidebar oraz page-contener wrapper*/
+  #wrapper {
+    padding-left: 20%;
+    position: relative;
+  }
+
+  #sidebar-wrapper {
+    width: 20%;
+  }
+
+  #page-content-wrapper {
+
+  }
+}
 
 .circular {
   border-radius: 50%;
@@ -117,49 +157,7 @@
   min-width: 100%;
   min-height: 100%;
 }
-@media(min-width: 768px) {
-  #wrapper {
-    padding-left: 270px;
-    position: relative;
-  }
 
-  #wrapper.toggled {
-    padding-left: 0;
-  }
-
-  #sidebar-wrapper {
-    width: 270px;
-  }
-
-  #wrapper.toggled #sidebar-wrapper {
-    width: 0px;
-  }
-
-  #page-content-wrapper {
-    position: relative;
-  }
-
-  #wrapper.toggled #page-content-wrapper {
-    position: relative;
-    margin-right: 0;
-  }
-}
-
-@media(min-width: 1200px ){
-  /*kontener trzymajacy sidebar oraz page-contener wrapper*/
-  #wrapper {
-    padding-left: 20%;
-    position: relative;
-  }
-
-  #sidebar-wrapper {
-    width: 20%;
-  }
-
-  #page-content-wrapper {
-
-  }
-}
 .sidebar-nav{
   width: 100%;
 }
